--- a/frontend/src/app/components/dialog/dialog-wrapper/dialog-content-wrapper.component.scss
+++ b/frontend/src/app/components/dialog/dialog-wrapper/dialog-content-wrapper.component.scss
@@ -10,7 +10,7 @@
   width: 100%;
   max-width: 1000px;
 
-  overflow-y: scroll;
+  overflow-y: auto;
 
   .dialog-wrapper-body {
     display: flex;
