--- a/frontend/src/app/components/tags/tag-icon/tag-icon.component.html
+++ b/frontend/src/app/components/tags/tag-icon/tag-icon.component.html
@@ -1,3 +1,4 @@
+<!-- TODO on hover show tooltip with name -->
 <div [style.background-color]="color"
      class="tag">
     <span [style.color]="useBlackIcon ? 'var(--michu-tech-black)' : 'var(--michu-tech-white)'"
