--- a/frontend/src/app/components/transactions/transaction-filter/transaction-filter.component.html
+++ b/frontend/src/app/components/transactions/transaction-filter/transaction-filter.component.html
@@ -1,13 +1,34 @@
+<!--TODO filter tags, expense, only today, needs attention & design nicer-->
 <div class="filter-container">
     <div class="filter">
-        <app-text-input [value]="queryControl" class="query" hint="Search receiver, alias & note" placeholder="Search">
-        </app-text-input>
-        <div class="tags"></div>
-        <div class="from">
-            <app-date-picker [control]="fromControl" height="60px" hint="Search from"></app-date-picker>
+        <div id="query">
+            <app-text-input [value]="queryControl" height="60px" hint="Search receiver, alias & note" placeholder="Search">
+            </app-text-input>
         </div>
-        <div class="to">
-            <app-date-picker [control]="toControl" height="60px" hint="Search until"></app-date-picker>
+        <div id="from">
+            <app-date-picker #fromDatePicker [control]="fromControl" height="60px" hint="Search from"></app-date-picker>
+        </div>
+        <div id="to">
+            <app-date-picker #toDatePicker [control]="toControl" height="60px" hint="Search until"></app-date-picker>
+        </div>
+        <div id="quickDates">
+            <app-button (onClick)="filterToday()" design="secondary" height="30px">
+                Today
+            </app-button>
+            <app-button (onClick)="filterLastWeek()" design="secondary" height="30px">
+                Week
+            </app-button>
+        </div>
+        <div id="resetButton">
+            <app-button (onClick)="resetFilter()" design="primary" height="60px" rightIcon="restart_alt" width="180px">
+                Reset
+            </app-button>
+        </div>
+        <div id="needsAttention">
+            <div class="icon">
+                <span class="material-symbols-rounded">priority_high</span>
+            </div>
+            <span class="smaller-text">Either couldn't assign a tag or found multiple tags and you need to decide.</span>
         </div>
     </div>
 </div>
