--- a/frontend/src/app/pages/welcome.page/login.page.component.scss
+++ b/frontend/src/app/pages/welcome.page/login.page.component.scss
@@ -74,6 +74,8 @@
         flex-flow: column;
         align-items: center;
         justify-content: center;
+
+        height: 100%;
       }
     }
   }
