--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -21,55 +21,54 @@
         </button>
     </header>
 
-    <div
-        [style.height]="fullscreenPage ? 'calc(100%)' : 'calc(100% - 20px - 80px)'"
-        class="center">
+    <div [style.height]="fullscreenPage ? 'calc(100%)' : 'calc(100% - 20px - 80px)'"
+         class="center">
         <nav *ngIf="!fullscreenPage"
              [style.width]="sideMenuOpen ? 'var(--nav-open-width)' : '0px'">
             <div class="menu-container">
-                <a (click)="closeMenuIfOverlayMode()"
+                <a (click)="onNavLinkClicked()"
                    [class.active-menu-item]="currentPage.route === pages.HOME"
                    [routerLink]="'app/' + pages.HOME"
                    class="menu-item">
                     <span>Home</span>
                     <span class="material-symbols-rounded">account_balance</span>
                 </a>
-                <a (click)="closeMenuIfOverlayMode()"
+                <a (click)="onNavLinkClicked()"
                    [class.active-menu-item]="currentPage.route === pages.BUDGET"
                    [routerLink]="'app/' + pages.BUDGET"
                    class="menu-item">
                     <span>Budget</span>
                     <span class="material-symbols-rounded">trending_up</span>
                 </a>
-                <a (click)="closeMenuIfOverlayMode()"
+                <a (click)="onNavLinkClicked()"
                    [class.active-menu-item]="currentPage.route === pages.TRANSACTIONS"
                    [routerLink]="'app/' + pages.TRANSACTIONS"
                    class="menu-item">
                     <span>Transactions</span>
                     <span class="material-symbols-rounded">payments</span>
                 </a>
-                <a (click)="closeMenuIfOverlayMode()"
+                <a (click)="onNavLinkClicked()"
                    [class.active-menu-item]="currentPage.route === pages.SAVE"
                    [routerLink]="'app/' + pages.SAVE"
                    class="menu-item">
                     <span>Save</span>
                     <span class="material-symbols-rounded">savings</span>
                 </a>
-                <a (click)="closeMenuIfOverlayMode()"
+                <a (click)="onNavLinkClicked()"
                    [class.active-menu-item]="currentPage.route === pages.CONFIGURATION"
                    [routerLink]="'app/' + pages.CONFIGURATION"
                    class="menu-item">
                     <span>Configuration</span>
                     <span class="material-symbols-rounded">tune</span>
                 </a>
-                <a (click)="closeMenuIfOverlayMode()"
+                <a (click)="onNavLinkClicked()"
                    [class.active-menu-item]="currentPage.route === pages.PROFILE"
                    [routerLink]="'app/' + pages.PROFILE"
                    class="menu-item">
                     <span>Profile</span>
                     <span class="material-symbols-rounded">account_circle</span>
                 </a>
-                <a (click)="closeMenuIfOverlayMode()"
+                <a (click)="onNavLinkClicked()"
                    [class.active-menu-item]="currentPage.route === pages.HELP"
                    [routerLink]="'app/' + pages.HELP"
                    class="menu-item">
@@ -82,7 +81,8 @@
 
         <main #pageContainer
               [@routeChangeTrigger]="currentRoute"
-              [style.width]="!sideMenuOpen || fullscreenPage ? '100%' : 'calc(100% - 300px)'" class="page-container">
+              [style.width]="!sideMenuOpen || fullscreenPage ? '100%' : 'calc(100% - 300px)'"
+              class="main-page-container">
             <router-outlet></router-outlet>
         </main>
     </div>
