--- a/frontend/src/app/components/dialog/dialog-wrapper/dialog-content-wrapper.component.html
+++ b/frontend/src/app/components/dialog/dialog-wrapper/dialog-content-wrapper.component.html
@@ -1,4 +1,4 @@
-<div class="dialog-wrapper">
+<div [style.max-width]="width" class="dialog-wrapper">
     <div class="dialog-wrapper-body">
         <h2 *ngIf="title">{{title}}</h2>
         <ng-content></ng-content>
