--- a/frontend/src/app/components/page-with-header/page-with-header.component.scss
+++ b/frontend/src/app/components/page-with-header/page-with-header.component.scss
@@ -1,21 +1,19 @@
 .page-with-header {
   width: 100%;
-  height: 100%;
   position: relative;
+  display: flex;
+  flex-flow: column;
+  gap: 10px;
 
   .page-header {
     position: sticky;
-    top: 0;
+    top: 10px;
     right: 0;
     left: 0;
     z-index: 1;
   }
 
   .page-content {
-    position: absolute;
-    top: 0;
-    right: 0;
-    left: 0;
     z-index: 100;
     background-color: var(--michu-tech-background);
   }
