--- a/frontend/src/app/components/transactions/transaction-filter/transaction-filter.component.scss
+++ b/frontend/src/app/components/transactions/transaction-filter/transaction-filter.component.scss
@@ -7,34 +7,53 @@
 
   .filter {
     width: 100cqw;
+    max-width: 1000px;
 
-    display: grid;
+    display: flex;
+    flex-flow: row wrap;
     gap: 12px;
-    grid-template-columns: repeat(2, calc(50% - 6px));
-    grid-auto-rows: 60px;
-    justify-items: flex-start;
     align-items: center;
-    max-width: 750px;
+    justify-content: center;
 
     margin-bottom: 12px;
 
-    .query, .tags {
-      display: block;
+    #query, #tags {
       width: 100%;
       height: 100%;
+      max-width: 500px;
+    }
+
+    #quickDates {
+      display: flex;
+      flex-flow: column;
+      gap: 2px;
+    }
+
+    #needsAttention {
+      display: flex;
+      flex-flow: row wrap;
+      width: 100%;
+      align-items: center;
+      justify-content: center;
+      gap: 5px;
+
+      .icon {
+        width: 22px;
+        height: 22px;
+        border-radius: 50%;
+        background-color: var(--michu-tech-warn);
+        display: flex;
+        align-items: center;
+        justify-content: center;
+
+        .material-symbols-rounded {
+          font-size: 18px !important;
+        }
+      }
     }
   }
 }
 
 @container transaction-filter (max-width: 650px) {
-  .filter-container {
 
-    .filter {
-
-      .query, .tags {
-        grid-column-start: 1;
-        grid-column-end: 3;
-      }
-    }
-  }
 }
