--- a/frontend/src/app/components/transactions/transaction/transaction.component.html
+++ b/frontend/src/app/components/transactions/transaction/transaction.component.html
@@ -1,4 +1,4 @@
-<app-expansion-panel topic="transaction">
+<app-expansion-panel [open]="needsAttention" topic="transaction">
     <div class="transaction-header" expansion-panel-header>
         <app-styled-amount [amount]="transaction.amount"
                            [expense]="transaction.expense">
@@ -11,6 +11,9 @@
                       [icon]="transaction.tag.icon"
                       class="tag">
         </app-tag-icon>
+        <div *ngIf="needsAttention" id="needsAttention">
+            <span class="material-symbols-rounded">priority_high</span>
+        </div>
     </div>
     <app-transaction-detail [transaction]="transaction"></app-transaction-detail>
 </app-expansion-panel>
