--- a/frontend/src/styles.scss
+++ b/frontend/src/styles.scss
@@ -39,20 +39,10 @@ body {
   padding: 0;
 }
 
-.page {
-  position: absolute;
-  top: 0;
-  right: 0;
-  bottom: 0;
-  left: 0;
-  box-sizing: border-box;
-}
-
 .page-container {
   width: 100%;
-  height: 100%;
   position: relative;
-  padding: 2vw;
+  padding: 0 2vw;
   box-sizing: border-box;
 }
 
@@ -101,6 +91,13 @@ a:visited {
 
 .icon-button:hover {
   opacity: 0.6;
+}
+
+.divider {
+  height: 1px;
+  width: 100%;
+  background-color: color-mix(in srgb, var(--michu-tech-foreground) 8%, transparent);
+  margin: 20px 0;
 }
 
 .smaller-text {
