--- a/frontend/src/app/components/transactions/transaction/transaction.component.html
+++ b/frontend/src/app/components/transactions/transaction/transaction.component.html
@@ -1,4 +1,4 @@
-<app-expansion-panel [open]="needsAttention" topic="transaction">
+<app-expansion-panel [open]="transaction.needsAttention ?? false" topic="transaction">
     <div class="transaction-header" expansion-panel-header>
         <app-styled-amount [amount]="transaction.amount"
                            [expense]="transaction.expense">
@@ -11,7 +11,7 @@
                       [icon]="transaction.tag.icon"
                       class="tag">
         </app-tag-icon>
-        <div *ngIf="needsAttention" id="needsAttention">
+        <div *ngIf="transaction.needsAttention ?? false" id="needsAttention">
             <span class="material-symbols-rounded">priority_high</span>
         </div>
     </div>
