--- a/frontend/src/app/components/transactions/transaction-filter/transaction-filter.component.html
+++ b/frontend/src/app/components/transactions/transaction-filter/transaction-filter.component.html
@@ -1,9 +1,12 @@
-<!--TODO filter tags, expense, only today, needs attention & design nicer-->
 <div class="filter-container">
     <div class="filter">
         <div id="query">
             <app-text-input [value]="queryControl" height="60px" hint="Search receiver, alias & note" placeholder="Search">
             </app-text-input>
+        </div>
+        <div id="tags">
+            <app-tag-selector [(selectedTagIds)]="selectedTags"
+                              [multiple]="true"></app-tag-selector>
         </div>
         <div id="from">
             <app-date-picker #fromDatePicker [control]="fromControl" height="60px" hint="Search from"></app-date-picker>
@@ -22,16 +25,17 @@
         <div id="needAttention">
             <app-checkbox [value]="needAttentionControl" label="Need attention"></app-checkbox>
         </div>
+        <div></div>
         <div id="resetButton">
             <app-button (onClick)="resetFilter()" design="primary" height="60px" rightIcon="restart_alt" width="180px">
                 Reset
             </app-button>
         </div>
-        <div id="needsAttention">
-            <div class="icon">
-                <span class="material-symbols-rounded">priority_high</span>
-            </div>
-            <span class="smaller-text">Either couldn't assign a tag or found multiple tags and you need to decide.</span>
+    </div>
+    <div id="needsAttention">
+        <div class="icon">
+            <span class="material-symbols-rounded">priority_high</span>
         </div>
+        <span class="smaller-text">Either couldn't assign a tag or found multiple tags and you need to decide.</span>
     </div>
 </div>
