simple change tag of transactions

--- a/frontend/src/app/components/dialog/dialog.component.scss
+++ b/frontend/src/app/components/dialog/dialog.component.scss
@@ -21,6 +21,7 @@
     box-sizing: border-box;
     background-color: var(--michu-tech-background);
     border-radius: 5px;
+    max-width: 95vw;
 
     transition: all 250ms ease-out;
     position: relative;
