WIP, work in configuration page & framework

--- a/frontend/src/app/components/expansion-panel/expansion-panel.component.html
+++ b/frontend/src/app/components/expansion-panel/expansion-panel.component.html
@@ -6,7 +6,7 @@
             <ng-content select="[expansion-panel-header]"></ng-content>
             <button [class.icon-button-open]="open" class="icon-button" style="height: 80%; aspect-ratio: 1 / 1;">
                 <span class="material-symbols-rounded">
-                    expand_more
+                    {{openIcon}}
                 </span>
             </button>
         </div>
