--- a/frontend/src/app/pages/home.page/home.page.component.html
+++ b/frontend/src/app/pages/home.page/home.page.component.html
@@ -1,5 +1,12 @@
-<div appPage class="page-container" pageRoute="home" pageTitle="Home">
+<div appPage
+     class="page-container"
+     pageRoute="home"
+     pageTitle="Home">
     <p>home.page works!</p>
+    <button (click)="reset()"
+            class="icon-button">
+        reset
+    </button>
 
     <div style="height: 300vh;">
     </div>
