--- a/frontend/src/app/components/transactions/transaction-detail/transaction-detail.component.html
+++ b/frontend/src/app/components/transactions/transaction-detail/transaction-detail.component.html
@@ -5,7 +5,8 @@
             <app-styled-amount [amount]="transaction.amount"
                                [expense]="transaction.expense">
             </app-styled-amount>
-            <app-text-input [value]="aliasInput" errorText="Max length is 50 letters."
+            <app-text-input [formControl]="aliasInput"
+                            errorText="Max length is 50 letters."
                             height="52px"
                             placeholder="Alias"
                             style="margin-top: 15px;">
