--- a/frontend/src/app/components/framework/dialog/dialog.component.html
+++ b/frontend/src/app/components/framework/dialog/dialog.component.html
@@ -1,9 +1,13 @@
-<div (click)="closeDialog($event)" [class.closed]="!open" id="dialog-container">
+<div (mousedown)="closeDialog($event)"
+     (touchstart)="closeDialog($event)"
+     [class.closed]="!open"
+     id="dialog-container">
     <div [style.opacity]="open ? 1 : 0"
          [style.scale]="open ? 1 : 0.95"
          class="dialog">
         <ng-template appDialogHost></ng-template>
-        <button (click)="closeDialog()" class="close icon-button">
+        <button (click)="closeDialog()"
+                class="close icon-button">
             <span class="material-symbols-rounded">close</span>
         </button>
     </div>
