--- a/frontend/src/app/components/framework/steps-panel/steps-panel.component.scss
+++ b/frontend/src/app/components/framework/steps-panel/steps-panel.component.scss
@@ -1,6 +1,7 @@
 .steps-panel {
   width: 100%;
   height: 100%;
+  transition: all 200ms ease-out;
 
   display: flex;
   gap: 12px;
@@ -25,5 +26,7 @@
     overflow-x: hidden;
     overflow-y: auto;
     position: relative;
+
+    transition: all 200ms ease-out;
   }
 }
