--- a/frontend/src/app/pages/login.page/login.page.component.scss
+++ b/frontend/src/app/pages/login.page/login.page.component.scss
@@ -15,13 +15,29 @@
 
 .login-page {
   display: grid;
-  grid-template-rows: 92svh;
-  grid-template-columns: repeat(2, 46vw);
+  grid-template-rows: calc(100svh - 8vw);
+  grid-template-columns: repeat(2, 42vw);
+  justify-content: space-evenly;
   align-items: center;
   justify-items: center;
 
   padding: 4vw;
   box-sizing: border-box;
+
+  .content {
+    position: relative;
+    width: 100%;
+    height: 100%;
+
+    app-login-form {
+      width: 100%;
+      height: 100%;
+
+      display: flex;
+      align-items: center;
+      justify-content: center;
+    }
+  }
 }
 
 @media (max-width: 950px) {
