--- a/frontend/src/app/components/framework/form/select/select.component.html
+++ b/frontend/src/app/components/framework/form/select/select.component.html
@@ -1,20 +1,28 @@
-<div (click)="close($event)" *ngIf="open" id="backdrop"></div>
+<div #selectInput
+     (click)="openSelect()"
+     class="input-container">
+    <input (keydown.escape)="open = false"
+           (keydown.tab)="handleCompleteRequest()"
+           [formControl]="value"
+           [placeholder]="placeholder"
+           class="input"/>
+    <span [class.input-icon-open]="open"
+          class="material-symbols-rounded input-icon">expand_more</span>
+    <span *ngIf="value.invalid"
+          class="form-error-message">{{ errorMessage }}</span>
+</div>
 
-<div class="select-container">
-    <div (click)="open = true" class="input-container">
-        <input (keydown.escape)="open = false"
-               (keydown.tab)="handleCompleteRequest()" [formControl]="value"
-               [placeholder]="placeholder"
-               class="input"/>
-        <span [class.input-icon-open]="open"
-              class="material-symbols-rounded input-icon">expand_more</span>
-        <span *ngIf="value.invalid" class="form-error-message">{{errorMessage}}</span>
-    </div>
-    <div [class.options-closed]="!open" class="options">
-        <button (click)="select(option)" *ngFor="let option of filteredOptions"
+<ng-template (fieldExtensionClosed)="open = false"
+             [appFieldExtension]="open"
+             [fieldExtensionFor]="selectInput"
+             fieldExtensionMatchParentWidth
+             fieldExtensionSide="bottom">
+    <div class="options">
+        <button (click)="select(option)"
+                *ngFor="let option of filteredOptions"
                 [class.option-selected]="isSelected(option)"
                 class="option">
-            <span>{{option}}</span>
+            <span>{{ option }}</span>
         </button>
     </div>
-</div>
+</ng-template>
