--- a/frontend/src/app/pages/login.page/login.page.component.scss
+++ b/frontend/src/app/pages/login.page/login.page.component.scss
@@ -6,7 +6,7 @@
   left: 0;
   pointer-events: none;
   filter: blur(12px);
-  z-index: -1;
+  z-index: var(--z-index-background);
 
   img {
     object-fit: cover;
