--- a/frontend/src/app/components/framework/display-error/display-error-dialog.component.html
+++ b/frontend/src/app/components/framework/display-error/display-error-dialog.component.html
@@ -1,14 +1,14 @@
 <app-dialog-content-wrapper title="Something went wrong">
     <div *ngIf="data.status >= 500 else showUserError">
         <p>Actually terribly wrong. This is the error: </p>
-        <h1>{{data.status}} {{data.statusText}}</h1>
-        <p>{{data.error | translateError}}</p>
+        <h1>{{ data.status }} {{ data.statusText }}</h1>
+        <p>{{ data.error | translateError }}</p>
     </div>
     <ng-template #showUserError>
-        <h2>{{data.error?.errorKey}}</h2>
-        <p style="max-width: 40vw;">{{data.error | translateError}}</p>
+        <h2>{{ errorTitle }}</h2>
+        <p style="max-width: 40vw;">{{ data.error | translateError }}</p>
     </ng-template>
-    <p class="smaller-text">{{data.status}} {{data.statusText}}</p>
+    <p class="smaller-text">{{ data.status }} {{ data.statusText }}</p>
 
     <ng-container dialogFooter>
         <app-button (onClick)="openHelpDialog()"
