--- a/frontend/src/app/pages/transaction.page/transaction.page.component.html
+++ b/frontend/src/app/pages/transaction.page/transaction.page.component.html
@@ -3,7 +3,7 @@
      pageTitle="Transactions">
     <app-page-with-header *ngIf="transactions$ | async as transactions else loadingTransactions">
         <ng-container pageHeader>
-            <app-transaction-filter></app-transaction-filter>
+            <app-transaction-filter [transactionRequest]="request"/>
         </ng-container>
         <p *ngIf="!transactions || transactions.size < 1">Found no transactions / no transactions imported yet!</p>
 
@@ -13,13 +13,12 @@
             <h3>{{ key }}</h3>
             <div class="transactions">
                 <app-transaction *ngFor="let transaction of transactions.get(key)"
-                                 [transaction]="transaction">
-                </app-transaction>
+                                 [transaction]="transaction"/>
             </div>
         </div>
 
         <div #loadMore
-             *ngIf="moreTransactionsAvailable"
+             *ngIf="hasNextPage"
              id="loadMore">
             <ng-template [ngTemplateOutlet]="loadingTransactions"></ng-template>
         </div>
