--- a/frontend/src/app/pages/transaction.page/transaction.page.component.scss
+++ b/frontend/src/app/pages/transaction.page/transaction.page.component.scss
@@ -22,6 +22,7 @@
   right: 0;
   bottom: 0;
   left: 0;
+  z-index: var(--z-index-default);
 
   cursor: wait;
   background-color: color-mix(in srgb, var(--michu-tech-background) 80%, var(--michu-tech-foreground));
